--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,11 +18,12 @@
 			{{ content }}
 			
 		</div><!-- /.container -->
-		<footer>
+		{% include footer.html %}
+		<!--<footer>
     		<ul>
         		<li><a href="mailto:frayalisia@gmail.com">email</a></li>
         		<li><a href="https://github.com/frayalisia">github.com/frayalisia</a></li>
 			</ul>
-		</footer>
+		</footer>-->
 	</body>
 </html>
