--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,6 @@
+main
+  display: block
+
 body {
     margin: 60px auto;
     width: 70%;
@@ -41,3 +44,4 @@ ul.posts {
 ul.posts li {
     list-style: none;
 }
+
