--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer class="footer">
-  <a class="subscribe" href="{{ "/books/atom.xml" | prepend: site.baseurl }}"> <span class="tooltip"> <i class="fa fa-rss"></i> RSS</span></a>
+  <a class="subscribe" href="{{ "/atom.xml" | prepend: site.baseurl }}"> <span class="tooltip"> <i class="fa fa-rss"></i>RSS</span></a>
   <div class="inner">
        <section class="copyright">All content copyright <a href="mailto:frayalisia@gmail.com">Alisia Fray</a> &copy; {{ site.time | date: '%Y' }} &bull; All rights reserved.</section>
   </div>
