--- a/css/main.scss
+++ b/css/main.scss
@@ -29,6 +29,7 @@ body {
   padding-right: ($spacing-unit * 2);
   padding-left: ($spacing-unit * 2);
   font-family: 'Source Sans Pro', sans-serif;
+  background-image: url(images/photo-1495195129352-aeb325a55b65.jpeg);
 }
 
 h1, h2, h3, h4, h5, h6, p {
