--- a/css/main.scss
+++ b/css/main.scss
@@ -19,7 +19,7 @@ $mq-lg: 55rem;
 
 html {
   box-sizing: border-box;
-  background-image: url(../images/photo-1495195129352-aeb325a55b65.jpeg);
+  background-image: url(../images/photo-1515.jpeg);
 }
 *, *:before, *:after {
   box-sizing: inherit;
