--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,4 +9,12 @@
   <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/atom.xml" | prepend: site.baseurl | prepend: site.url }}">
+  
+  <nav>
+    <ul>
+      <li><a href="/">Библиотека Алисы Фрай</a></li>
+      <li><a href="/about">Обо мне</a></li>
+    </ul>
+  </nav>
+  
 </head>
