--- a/css/main.scss
+++ b/css/main.scss
@@ -56,9 +56,8 @@ img {
 }
 
 nav ul {
-    font-family:'Helvetica', 'Arial', 'Sans-Serif';
+    font-family: 'Source Sans Pro', sans-serif;
     padding: 0px;
-    list-style: none;
     font-weight: bold;
 }
 nav ul li {
