--- a/css/main.scss
+++ b/css/main.scss
@@ -63,6 +63,8 @@ nav ul {
 nav ul li {
     display: inline;
     margin-right: 20px;
+    color: black;
+    font-size: 3em;
 }
 
 /*----- Books -----*/
