--- a/css/main.scss
+++ b/css/main.scss
@@ -63,6 +63,9 @@ nav ul {
 nav ul li {
     display: inline;
     margin-right: 20px;
+}
+
+nav ul li a {
     color: black;
     font-size: 3em;
 }
