--- a/css/main.scss
+++ b/css/main.scss
@@ -62,12 +62,12 @@ nav ul {
 }
 nav ul li {
     display: inline;
-    margin-right: 20px;
+    margin-left: 20px;
 }
 
 nav ul li a {
     color: black;
-    font-size: 3em;
+    font-size: 2em;
 }
 
 /*----- Books -----*/
