--- a/css/main.scss
+++ b/css/main.scss
@@ -62,7 +62,8 @@ nav ul {
 }
 nav ul li {
     display: inline;
-    margin-left: 20px;
+    margin-right: 20px;
+    padding-right: 30px;
 }
 
 nav ul li a {
