--- a/css/main.scss
+++ b/css/main.scss
@@ -26,7 +26,8 @@ html {
 }
 
 body {
-  margin: 0;
+  margin: 60px auto;
+  width: 70%;
   padding-right: ($spacing-unit * 2);
   padding-left: ($spacing-unit * 2);
   font-family: 'Source Sans Pro', sans-serif;
@@ -57,6 +58,7 @@ img {
 
 nav ul {
     font-family: 'Source Sans Pro', sans-serif;
+    margin: 20px auto 40px; 
     padding: 0px;
     font-weight: bold;
 }
@@ -169,6 +171,7 @@ nav ul li a {
 /*----- Footer -----*/
 
 .footer {
+  margin-top: 60px auto;
   margin-bottom: 100px;
   text-align: center;
 }
