--- a/css/main.scss
+++ b/css/main.scss
@@ -26,7 +26,7 @@ html {
 }
 
 body {
-  margin: 60px auto;
+  margin: $spacing-unit auto;
   width: 70%;
   padding-right: ($spacing-unit * 2);
   padding-left: ($spacing-unit * 2);
