--- a/css/main.scss
+++ b/css/main.scss
@@ -34,7 +34,7 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6, p {
-  margin: 20px;
+  margin: 10px;
 }
 
 h1 {
@@ -42,9 +42,12 @@ h1 {
 }
 
 p {
-    margin: 60px auto;
     font-size: 1em;
     line-height: 1.4em;
+}
+
+div {
+  margin: 60px auto;
 }
 
 a {
