--- a/css/main.scss
+++ b/css/main.scss
@@ -42,7 +42,7 @@ h1 {
 }
 
 p {
-    font-size: 1.3em;
+    font-size: 1.2em;
     line-height: 1.4em;
 }
 
@@ -71,6 +71,10 @@ nav ul li {
 nav ul li a {
     color: black;
     font-size: 2em;
+}
+
+.post {
+     margin: 60px auto;
 }
 
 /*----- Books -----*/
