--- a/css/main.scss
+++ b/css/main.scss
@@ -30,7 +30,7 @@ body {
   width: 100%;
   padding-right: ($spacing-unit * 2);
   padding-left: ($spacing-unit * 2);
-  font-family: 'Source Sans Pro', sans-serif;
+  font-family: monospace;
 }
 
 h1, h2, h3, h4, h5, h6, p {
@@ -43,7 +43,7 @@ h1 {
 
 p {
     font-size: 1.2em;
-    line-height: 1.4em;
+    line-height: 1.3em;
 }
 
 a {
@@ -57,14 +57,15 @@ img {
 }
 
 nav ul {
-    font-family: 'Source Sans Pro', sans-serif;
-    margin: 20px auto 40px; 
+    font-family: Georgia;
+    margin: 30px auto 40px; 
     padding: 0px;
     font-weight: bold;
 }
 nav ul li {
     display: inline;
-    margin-right: 20px;
+    margin-right: 30px;
+    margin-left: 50px;
     padding-right: 30px;
 }
 
@@ -74,7 +75,7 @@ nav ul li a {
 }
 
 .post {
-     margin: 60px auto;
+     margin: 60px;
 }
 
 /*----- Books -----*/
