--- a/css/main.scss
+++ b/css/main.scss
@@ -186,6 +186,7 @@ nav ul li a {
   border-top: 5px solid #eee;
   padding: ($spacing-unit * 2);
   margin-left: 20px;
+  text-align: center;
 }
 
 
