--- a/css/main.scss
+++ b/css/main.scss
@@ -193,9 +193,9 @@ nav ul li a {
 /*----- Footer -----*/
 
 .footer {
-  /*----- margin-top: 60px auto;
-  margin-bottom: 30px;-----*/
-  margin-top: 10px;
-  padding: 2rem 2rem;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 60px;
   text-align: center;
 }
