--- a/css/main.scss
+++ b/css/main.scss
@@ -91,6 +91,7 @@ nav ul li a {
     margin-left: 60px;
     margin-right: 60px;
     padding-top: 10px;
+    margin-bottom: 50px;
 }
 
 /*----- Books -----*/
@@ -192,9 +193,9 @@ nav ul li a {
 /*----- Footer -----*/
 
 .footer {
-  position: absolute;
+  position: fixed bottom;
   bottom: 0;
   width: 100%;
-  height: 60px;
+  height: 50px;
   text-align: center;
 }
