--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,8 +10,11 @@
       {% if site.github_url %}
         <li><a href="{{ site.github_url }}"><i class="fa fa-github-square" aria-hidden="true"></i></a></li>
       {% endif %}
+      {% if site.vk_url %}
+        <li><a href="{{ site.vk_url }}"><i class="fa fa-vk" aria-hidden="true"></i></a></li>
+      {% endif %}
   </ul>
   <div class="inner">
-      <section class="copyright">All content copyright <a href="mailto:frayalisia@gmail.com">Alisia Fray</a> &copy; 2018 &bull; All rights reserved.</section>
+      <section class="copyright">All content copyright <a href="mailto:{{ site.email }}">Alisia Fray</a> &copy; 2018 &bull; All rights reserved.</section>
   </div>
 </footer>
